--- a/kaszubnet_app/templates/base.html
+++ b/kaszubnet_app/templates/base.html
@@ -12,16 +12,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'style/css.css' %}"/>
 </head>
 <body>
 <div class="screen">
     <div class="container-fluid">
-        <div class="row" id="border-row">
+        <div class="row border-row">
             <div class="col">
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center">
-                    <h2 class="text-center">KASZUBnet.V2</h2>
+                <h2 class="text-center">KASZUBnet.V2</h2>
             </div>
             <div class="col">
             </div>
@@ -29,13 +30,14 @@
         <div class="row">
             <div class="col-md-1">
             </div>
-            <div class="col-md-10" id="main-panel">
+            <div class="col-md-10 main-panel">
+                {% block upper_row %}{% endblock %}
                 {% block content %}{% endblock %}
             </div>
             <div class="col-md-1">
             </div>
         </div>
-        <div class="row" id="border-row">
+        <div class="row border-row">
             <div class="col">
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center">
