--- a/kaszubnet_app/templates/index.html
+++ b/kaszubnet_app/templates/index.html
@@ -1,22 +1,73 @@
-{% extends "base.html" %}
-{% block content %}
+{% load static %}
 
-<div class="col-md-12 d-flex align-items-center justify-content-center" style="height: 80vh;">
-    <div class="container mt-3 text-center">
-        <h3>Logowanie:</h3>
-        <form method="post">
-            {% csrf_token %}
-            <div class="mb-3 mt-3">
-                <label>Login:</label>
-                {{form.username}}
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>KaszubNet</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'style/css.css' %}"/>
+</head>
+<body>
+<div class="screen">
+    <div class="container-fluid">
+        <div class="row border-row">
+            <div class="col">
             </div>
-            <div class="mb-3">
-                <label>Hasło:</label>
-                {{form.password}}
+            <div class="col-md-6 d-flex justify-content-center align-items-center">
+                <h2 class="text-center">KASZUBnet.V2</h2>
             </div>
-            <button type="submit" class="btn btn-warning">Zaloguj</button>
-        </form>
+            <div class="col">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-10 main-panel">
+                <div class="col-md-12 d-flex align-items-center justify-content-center" style="height: 80vh;">
+                    <div class="container mt-3 text-center">
+                        <h3>Logowanie:</h3>
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="mb-3 mt-3">
+                                <label>Login:</label>
+                                {{form.username}}
+                            </div>
+                            <div class="mb-3">
+                                <label>Hasło:</label>
+                                {{form.password}}
+                            </div>
+                            <button type="submit" class="btn btn-warning">Zaloguj</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+            </div>
+        </div>
+        <div class="row border-row">
+            <div class="col">
+            </div>
+            <div class="col-md-6 d-flex justify-content-center align-items-center">
+                <footer>KASZUBnet.V2 wersja 0.1</footer>
+            </div>
+            <div class="col">
+            </div>
+        </div>
     </div>
 </div>
 
-{% endblock %}
+<!-- Bootstrap JS plugin -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+</body>
+</html>
+
+
