--- a/kaszubnet_app/templates/faction_menu.html
+++ b/kaszubnet_app/templates/faction_menu.html
@@ -4,16 +4,13 @@
 <div class="col-md-2 main-menu-menu">
     <div class="row" style="height: 75vh;">
         <div class="col-12 d-flex justify-content-center align-items-center" style="height: 20vh;">
-            <h3>Menu</h3>
+            <h3>Frakcja</h3>
         </div>
         <div class="col-12" style="height: 55vh;">
             <div class="list-group list-group-flush ">
-                <a href="/faction_menu/" class="list-group-item">Frakcja</a>
-                <a class="list-group-item">Kronika</a>
-                <a class="list-group-item">Artefakty frakcyjne</a>
-                <a class="list-group-item">Magazyn</a>
-                <a class="list-group-item">Mapa ekspansji</a>
-                <a class="list-group-item">Węzeł komunikacyjny</a>
+                <a class="list-group-item" href="/members/">Członkowie</a>
+                <a class="list-group-item" href="/hierarchy/">Hierarchia</a>
+                <a class="list-group-item" href="/faction_law/">Prawo Przystani</a>
             </div>
         </div>
     </div>
