--- a/kaszubnet_app/static/style/css.css
+++ b/kaszubnet_app/static/style/css.css
@@ -2,6 +2,8 @@ body{
     font-family: 'Share Tech Mono', monospace;
     color: #f4a22a;
     margin:0px;
+    background-color: unset;
+    position: relative;
 }
 
 p{
@@ -24,7 +26,55 @@ p{
 .list-group-item:hover{
     background-color: #f4a22a20;
 }
+.list-group-item.active{
+    background-color: #f4a22a20;
+    color: #f4a22a;
+    border-color: unset;
+}
 
+a:hover, a:visited, a:link {
+    color: #f4a22a
+}
+
+img{
+    border: 1px solid #f4a22a;
+}
+
+.dropdown-menu{
+    background-color: #191006;
+    border-style: solid;
+    border-color: #f4a22a;
+    border-width: 1px;
+}
+
+iframe{
+    width: 100%;
+    height: 75vh;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 0;
+  border-style: solid;
+  border-color: #f4a22a;
+  border-width: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: unset;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f4a22a;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #f4a22a;
+}
 
 
 .screen{
@@ -72,4 +122,11 @@ p{
     border-color: #f4a22a;
     border-width: 1px;
     height: 75vh;
+}
+
+.members-list-card{
+    border-left-style: solid;
+    border-color: #f4a22a;
+    border-width: 1px;
+    height: 30vh;
 }
