--- a/kaszubnet_app/templates/main_menu.html
+++ b/kaszubnet_app/templates/main_menu.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_menu.html" %}
 
 {% block menu_panel %}
 <div class="col-md-2 main-menu-menu">
@@ -9,32 +9,12 @@
         <div class="col-12" style="height: 55vh;">
             <div class="list-group list-group-flush ">
                 <a href="/faction_menu/" class="list-group-item">Frakcja</a>
-                <a class="list-group-item">Kronika</a>
-                <a class="list-group-item">Artefakty frakcyjne</a>
-                <a class="list-group-item">Magazyn</a>
-                <a class="list-group-item">Mapa ekspansji</a>
+                <a href="/chronicle_menu/" class="list-group-item">Kronika</a>
+                <a href="/artefacts_menu/"class="list-group-item">Artefakty frakcyjne</a>
+                <a href="/warehouse_menu/" class="list-group-item">Magazyn</a>
+                <a href="/expansion_map/" class="list-group-item">Mapa ekspansji</a>
                 <a class="list-group-item">Węzeł komunikacyjny</a>
             </div>
-        </div>
-    </div>
-</div>
-{% endblock %}
-
-{% block content %}
-<div class="col-md-7" style="height: 75vh;"></div>
-{% endblock %}
-
-{% block character_panel %}
-<div class="col-md-3 main-menu-character-display">
-    <div class="col-12 d-flex justify-content-center align-items-center" style="height: 10vh;">
-        Witaj: {{ character.name }}
-    </div>
-    <div class="col-12 d-flex justify-content-center align-items-center" style="height: 45vh;">
-        <img src="../../static/talos_g.gif" class="img-fluid">
-    </div>
-    <div class="col-12 d-flex justify-content-center align-items-center" style="height: 20vh;">
-        <div class="list-group list-group-flush ">
-            <a href="/edytor-postaci/" class="list-group-item"> [ Edytor postaci ]</a>
         </div>
     </div>
 </div>
