--- a/kaszubnet_app/templates/main_menu.html
+++ b/kaszubnet_app/templates/main_menu.html
@@ -13,7 +13,7 @@
                 <a href="/artefacts_menu/"class="list-group-item">Artefakty frakcyjne</a>
                 <a href="/warehouse_menu/" class="list-group-item">Magazyn</a>
                 <a href="/expansion_map/" class="list-group-item">Mapa ekspansji</a>
-                <a class="list-group-item">Węzeł komunikacyjny</a>
+                <a class="list-group-item"><del>Węzeł komunikacyjny</del></a>
             </div>
         </div>
     </div>
