--- a/kaszubnet_app/templates/base_menu.html
+++ b/kaszubnet_app/templates/base_menu.html
@@ -13,11 +13,11 @@
         Witaj: {{ character.name }}
     </div>
     <div class="col-12 d-flex justify-content-center align-items-center" style="height: 45vh;">
-        <img src="../../static/talos_g.gif" class="img-fluid">
+        <img src="../../static/temp_picture.jpg" class="img-fluid">
     </div>
     <div class="col-12 d-flex justify-content-center align-items-center" style="height: 20vh;">
         <div class="list-group list-group-flush ">
-            <a href="/edytor-postaci/" class="list-group-item"> [ Edytor postaci ]</a>
+            <a href="/character_editor/" class="list-group-item"> [ Edytor postaci ]</a>
         </div>
     </div>
 </div>
